[project]
name = "medea-scraper"
version = "0.1.0"
description = "Scraper for MEDEA index"
authors = [
    {name = "Gutie"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.34.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
