[project]
name = "medea-scraper"
version = "0.1.0"
description = "Scraper for MEDEA index"
authors = [
    {name = "Gutie"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "geopandas (>=1.1.3,<2.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "mapclassify (>=2.10.0,<3.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
